# GraphRAG-Psychotherapist-Agent

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  gradio_app.py  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  routes_escalation.py  routes_feedback.py  routes_messages.py  routes_sessions.py
core/: __init__.py  config.py  settings.py  utils.py
data/: seed_kg.csv
graph_rag/: __init__.py  celery.py  config.py  models.py  schemas.py  settings.py  tasks.py
graph_rag/core/: __init__.py  pipeline.py
graph_rag/graph/: graph.py  nodes.py
graph_rag/schemas/: __init__.py
graph_rag/services/: __init__.py  cache.py  graphdb.py  llm.py  llm_service.py  milvus_service.py  neo4j_service.py  redis_service.py  safety_service.py  vectorstore.py  weaviate_service.py
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
mlops/: __init__.py  deployment.py  logging.py  monitoring.py  tracking.py
nginx/: nginx.conf
orchestrator/: __init__.py  graph_dag.py
orchestrator/nodes/: __init__.py  context_builder.py  hybrid_scorer.py  kg_mapper.py  llm_invoker_gpt5.py  preprocess.py  provenance_builder.py  response_streamer.py  safety_postfilter.py  safety_prefilter.py  vector_retriever.py
scripts/: ingest_data.py
services/: clinician_console.py  embedding_service.py  escalation_service.py  graph_db.py  provenance_service.py  safety_service.py  vector_store.py
tests/: test_api.py  test_graph_dag.py  test_integration.py  test_safety.py
web_client/: index.html
